--- a/css/search-room.css
+++ b/css/search-room.css
@@ -3,51 +3,7 @@ img {
     height: 50px;
 }
 
-.header {
-    background-color: #249CEC;
-    margin-bottom: 10px;
-}
-
-.header .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 70px;
-}
-
-.header .logo {
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-}
-
-.header .logo img {
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    margin-right: 5px;
-}
-
-.header .logo span {
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.header .auth-buttons {
-    display: flex;
-    gap: 10px;
-}
-
-.header .auth-button {
-    background: white;
-    border: none;
-    border-radius: 10px;
-    padding: 5px 10px;
-    color: #249CEC;
-    font-weight: bold;
-    color: 16px;
-}
+/* header  */
 
 /* end-header */
 
@@ -383,44 +339,6 @@ img {
 
 
 /* footer  */
-.footer-section {
-    background-color: #2464ec;
-    margin-top: 50px;
-}
 
-.footer-section a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.footer-section .container {
-    display: flex;
-    justify-content: space-between;
-    /* align-items: center; */
-    min-height: 100px;
-    color: #fff;
-    padding: 10px 0;
-}
-
-.footer-social-icon img {
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-}
-
-.footer-title {
-    margin-bottom: 8px;
-    font-size: 20px;
-}
-
-.footer-info,
-.footer-link {
-    margin-bottom: 5px;
-}
-
-.footer-socials {
-    display: flex;
-    justify-content: space-between;
-}
 
 /* end-footer  */
